[package]
name = "resim"
version = "0.0.3-alpha"
description = "Fast image manipulation library for JavaScript world"
authors = ["sinansonmez@outlook.com"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/sinansonmez/resim"
homepage = "https://github.com/sinansonmez/resim"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
image = "0.24.7"
js-sys = "0.3.64"
base64 = "0.21.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "ImageData",
  "console",
]
optional = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["enable_wasm"]
enable_wasm = [
  "web-sys",
  "console_error_panic_hook"
]