[package]
name = "resim"
version = "1.0.0"
description = "Fast image manipulation library for JavaScript world"
authors = ["sinansonmez@outlook.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/sinansonmez/resim"
homepage = "https://github.com/sinansonmez/resim"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "ImageData",
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
]
optional = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["enable_wasm"]
enable_wasm = [
  "web-sys",
  "console_error_panic_hook"
]
